--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "BOT",
-    "PREFIX": ".",
+    "PREFIX": "",
     "ADMINBOT": [
-        "100013384479798",
+        "61569409418704",
         "",
         ""
     ],
